--- a/src/images/templates/detail.html
+++ b/src/images/templates/detail.html
@@ -5,7 +5,7 @@
 <div class="row">
     <div class="col-md-7">
         <figure>
-            <img src="{{ image.thumb_large.url }}" />
+            <img src="{{ image.image.url }}" />
             {% if image.source %}
             <figcaption>
                 From: <a href="{{ image.source }}">{{ image.source }}</a>
