--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <title>{% block title %}{{ request.site.name }} — Des images qu'elles sont belles{% endblock title %}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="{{ STATIC_URL }}/img/favicon.ico" rel="icon" type="image/x-icon" />
+        <link href="{{ STATIC_URL }}/img/favicon.ico" rel="icon" type="image/x-icon">
         {% compressed_css "base" %}
 
         {% block extra_css %}{% endblock extra_css %}
