--- a/src/memes/templates/meme.html
+++ b/src/memes/templates/meme.html
@@ -17,11 +17,11 @@
             {% csrf_token %}
             <div class="form-group">
                 <label for="top-tex">Top text</label>
-                <input class="form-control" type="text" name="top_text" id="top-text">
+                <input class="form-control" type="text" name="top_text" id="top-text" autocomplete="off">
             </div>
             <div class="form-group">
                 <label for="bottom-tex">Bottom text</label>
-                <input class="form-control" type="text" name="bottom_text" id="bottom-text">
+                <input class="form-control" type="text" name="bottom_text" id="bottom-text" autocomplete="off">
             </div>
 
             <input type="hidden" name="source_image" value="{{ image.id }}">
