--- a/src/images/templates/detail.html
+++ b/src/images/templates/detail.html
@@ -12,7 +12,7 @@
             </figcaption>
             {% endif %}
         </figure>
-        {% if perms.is_admin %}
+        {% if perms.images.add_image %}
             <p><a href="{% url 'admin:images_image_change' image.pk %}" class="btn btn-danger">Admin</a></p>
         {% endif %}
     </div>
