--- a/src/images/templates/tags_snippet.html
+++ b/src/images/templates/tags_snippet.html
@@ -1,5 +1,5 @@
 {% load tags %}
-<div class="panel panel-primary">
+<div class="panel panel-danger">
     <div class="panel-heading">
         <h3 class="panel-title">Tags</h3>
     </div>
