--- a/src/images/templates/upload.html
+++ b/src/images/templates/upload.html
@@ -6,6 +6,6 @@
 
     {% include 'form_snippet.html' with form=form %}
 
-    <input type="submit" value="{{ _('Send') }}" class="btn btn-primary">
+    <input type="submit" value="{{ _('Send') }}" class="btn btn-danger">
 </form>
 {% endblock %}
