--- a/src/memes/templates/meme.html
+++ b/src/memes/templates/meme.html
@@ -28,7 +28,7 @@
               <input type="hidden" name="source_image" value="{{ image.id }}">
               <input type="hidden" name="file" value="">
               <input type="hidden" name="mime" value="{{ mime }}">
-              <input type="submit" value="Upload meme" class="btn btn-block btn-primary">
+              <input type="submit" value="Upload meme" class="btn btn-block btn-danger">
               <div id="meme-form-errors" class="form-group has-error"></div>
             {% endif %}
         </form>
