--- a/src/images/templates/list.html
+++ b/src/images/templates/list.html
@@ -25,7 +25,7 @@
             {% include 'form_snippet.html' with form=form %}
 
             <div class="form-group">
-              <input class="btn btn-danger btn-block" type="submit" value="{{ _('Send') }}">
+              <button type="submit" class="btn btn-danger btn-block">{{ _("Send") }}</button>
             </div>
         </form>
       {% endif %}
