--- a/src/images/templates/list.html
+++ b/src/images/templates/list.html
@@ -30,7 +30,7 @@
         </form>
       {% endif %}
 
-      {% include "tags_snippet.html" %}
+      {% include "snippets/tags.html" %}
 
     </div>
 </div>
