--- a/src/images/templates/detail.html
+++ b/src/images/templates/detail.html
@@ -14,17 +14,17 @@
         </p>
 
         {% if not image.is_meme %}
+          {% if perms.images.manage_tags %}
+            <form action="" method="POST" class="form" role="form">
+              {% csrf_token %}
+              {% include "snippets/form.html" with form=tags_form %}
+              <div class="form-group">
+                <button type="submit" class="btn btn-danger">{{ _("Update tags") }}</button>
+              </div>
+            </form>
+          {% else %}
             {% include "snippets/tags.html" with tags=image.tags %}
-        {% endif %}
-
-        {% if perms.images.manage_tags %}
-          <form action="" method="POST" class="form" role="form">
-            {% csrf_token %}
-            {% include "snippets/form.html" with form=tags_form %}
-            <div class="form-group">
-              <button type="submit" class="btn btn-danger">{{ _("Update tags") }}</button>
-            </div>
-          </form>
+          {% endif %}
         {% endif %}
 
         {% if request.user.is_staff and perms.images.change_image %}
