--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,4 +1,4 @@
-{% load compressed %}
+{% load compressed i18n %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,8 +16,21 @@
 <nav class="navbar navbar-default" role="navigation">
   <div class="container">
     <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
       <a class="navbar-brand" href="/">{{ request.site.name }}</a>
     </div>
+
+    <div class="collapse navbar-collapse" id="navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><a href="{% url 'upload' %}">{% trans "Upload" %}</a></li>
+      </ul>
+    </div>
+
   </div>
 </nav>
 
