--- a/src/templates/registration/login.html
+++ b/src/templates/registration/login.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
-{% load i18n %}
+{% load i18n img %}
 
 {% block content %}
   <h1>{% trans "Login" context "heading" %}</h1>
-  <form action="{% url 'login' %}" method="POST" class="form" role="form">
+  <form action="{% secure_url 'login' %}" method="POST" class="form" role="form">
     {% csrf_token %}
     {% include "snippets/form.html" %}
     <button type="submit" class="btn btn-danger">{% trans "Login" context "button" %}</button>
