--- a/src/images/templates/list.html
+++ b/src/images/templates/list.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load tags %}
 
 {% block content %}
 <div class="row">
@@ -30,7 +31,7 @@
         </form>
       {% endif %}
 
-      {% include "snippets/tags.html" %}
+      {% show_tags %}
 
     </div>
 </div>
