--- a/src/images/templates/detail.html
+++ b/src/images/templates/detail.html
@@ -27,7 +27,7 @@
           {% endif %}
         {% endif %}
 
-        {% if request.user.is_staff and perms.images.change_image %}
+        {% if user.is_staff and perms.images.change_image %}
           <form class="form" role="form">
             <div class="form-group">
               <a href="{% url 'admin:images_image_change' image.pk %}" class="btn btn-danger">Admin</a>
