--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -27,7 +27,7 @@
 
     <div class="collapse navbar-collapse" id="navbar-collapse-1">
       <ul class="nav navbar-nav">
-        {% if request.user.is_authenticated %}
+        {% if user.is_authenticated %}
           {% if perms.images.add_image %}
             <li><a href="{% url 'upload' %}">{% trans "Upload" %}</a></li>
           {% endif %}
