--- a/src/images/templates/list.html
+++ b/src/images/templates/list.html
@@ -2,45 +2,45 @@
 {% load tags %}
 
 {% block content %}
-<div class="row">
+  <div class="row">
 
     <div class="col-md-8">
-    <div class="row">
-    {% for image in images %}
-        {% if image.thumb_small %}
-        <div class="col-xs-6 col-md-3 img">
-            <a href="{% url 'detail' image.unique_key %}">
-                <img src="" data-src="{{ image.thumb_small.url }}" class="lazy img-thumbnail">
-            </a>
-        </div>
-        {% endif %}
-    {% endfor %}
-    </div>
+      <div class="row">
+        {% for image in images %}
+          {% if image.thumb_small %}
+            <div class="col-xs-6 col-md-3 img">
+              <a href="{% url 'detail' image.unique_key %}">
+                <img src="{% static "travaux150.gif" %}" data-src="{{ image.thumb_small.url }}" class="lazy img-thumbnail">
+              </a>
+            </div>
+          {% endif %}
+        {% endfor %}
+      </div>
     </div>
 
     <div class="col-md-4">
       {% if perms.images.add_image %}
         <form method="POST" action="{% url 'upload' %}" enctype="multipart/form-data" class="form" role="form">
-            {% csrf_token %}
+          {% csrf_token %}
 
-            {% include 'snippets/form.html' %}
+          {% include 'snippets/form.html' %}
 
-            <div class="form-group">
-              <button type="submit" class="btn btn-danger btn-block">{{ _("Send") }}</button>
-            </div>
+          <div class="form-group">
+            <button type="submit" class="btn btn-danger btn-block">{{ _("Send") }}</button>
+          </div>
         </form>
       {% endif %}
 
       {% show_tags %}
 
     </div>
-</div>
+  </div>
 {% endblock %}
 
 {% block extra_js %}
-<script>
-  jQuery(document).ready(function() {
-    jQuery("img.lazy").lazy();
-  });
-</script>
+  <script>
+    jQuery(document).ready(function () {
+      jQuery("img.lazy").lazy();
+    });
+  </script>
 {% endblock %}
