images: stub image

--- a/src/images/templates/list.html
+++ b/src/images/templates/list.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load tags %}
+{% load staticfiles tags %}
 
 {% block content %}
   <div class="row">
@@ -10,7 +10,7 @@
           {% if image.thumb_small %}
             <div class="col-xs-6 col-md-3 img">
               <a href="{% url 'detail' image.unique_key %}">
-                <img src="{% static "travaux150.gif" %}" data-src="{{ image.thumb_small.url }}" class="lazy img-thumbnail">
+                <img src="{% static "travaux150.gif" %}" data-src="{{ image.thumb_small.url }}" class="lazy img-thumbnail" width="150" height="150">
               </a>
             </div>
           {% endif %}
