--- a/src/images/templates/detail.html
+++ b/src/images/templates/detail.html
@@ -14,12 +14,12 @@
         </p>
 
         {% if not image.is_meme %}
-          {% if perms.images.manage_tags %}
+          {% if perms.images.change_image %}
             <form action="" method="POST" class="form" role="form">
               {% csrf_token %}
-              {% include "snippets/form.html" with form=tags_form %}
+              {% include "snippets/form.html" %}
               <div class="form-group">
-                <button type="submit" class="btn btn-danger">{{ _("Update tags") }}</button>
+                <button type="submit" class="btn btn-danger">{{ _("Update") }}</button>
               </div>
             </form>
           {% else %}
