--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -31,6 +31,10 @@
           {% if perms.images.add_image %}
             <li><a href="{% url 'upload' %}">{% trans "Upload" %}</a></li>
           {% endif %}
+          {% if perms.images.change_image %}
+            <li><a href="{% url 'not_listed' %}">{% trans "Images not listed" %}</a></li>
+            <li><a href="{% url 'not_tagged' %}">{% trans "Images not tagged" %}</a></li>
+          {% endif %}
           <li><a href="{% url 'logout' %}?next={{ request.path }}">{% trans "Logout" %}</a></li>
         {% else %}
           <li><a href="{% secure_url 'login' %}?next={{ request.path }}">{% trans "Login" %}</a></li>
