--- a/src/images/templates/detail.html
+++ b/src/images/templates/detail.html
@@ -4,6 +4,10 @@
 {% block content %}
 <div class="row">
     <div class="col-md-7">
+        {% if image.inappropriate %}
+          <div class="alert alert-danger" role="alert">This image was flagged as inappropriate or illicit!</div>
+        {% endif %}
+
         <p>
             <img src="{{ image.image.url }}" class="img-responsive">
             {% if image.source %}
@@ -26,6 +30,13 @@
             {% show_tags image.tags %}
           {% endif %}
         {% endif %}
+
+        <form action={% url 'flag_inappropriate' unique_key %} method="POST" class="form" role="form">
+          {% csrf_token %}
+          <div class="form-group">
+            <button type=submit" class="btn btn-danger">{{ _("Flag as inappropriate or illicit") }}</button>
+          </div>
+        </form>
     </div>
 
     <div class="col-md-5">
