--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -32,10 +32,10 @@
             <li><a href="{% url 'upload' %}">{% trans "Upload" %}</a></li>
           {% endif %}
           {% if perms.images.change_image %}
-            <li><a href="{% url 'not_listed' %}">{% trans "Images not listed" %}</a></li>
-            <li><a href="{% url 'not_tagged' %}">{% trans "Images not tagged" %}</a></li>
+            <li><a href="{% url 'not_listed' %}">{% trans "Images not listed," %}</a></li>
+            <li><a href="{% url 'not_tagged' %}">{% trans "not tagged," %}</a></li>
             <li>
-              <a href="{% url 'inappropriate' %}">{% trans "Images inappropriate" %}
+              <a href="{% url 'inappropriate' %}">{% trans "inappropriate" %}
                 {% if inappropriate_counter %}
                   <span class="label label-danger">{{ inappropriate_counter }}</span>
                 {% endif %}
