images: search form, generally faster than search the tag link

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -48,6 +48,9 @@
         {% endif %}
         <li><a href="{% url 'legal_mentions' %}">{% trans "Legal mentions" %}</a></li>
       </ul>
+      <form action="{% url 'image_list' %}" method="GET" class="navbar-form navbar-right">
+        <input type="text" name="q" class="form-control" placeholder="Search…">
+      </form>
     </div>
 
   </div>
