templates: made that mistake to forget the submit button on mobile
Or touch screens at large.

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -50,6 +50,7 @@
       </ul>
       <form action="{% url 'image_list' %}" method="GET" class="navbar-form navbar-right">
         <input type="text" name="q" class="form-control" placeholder="Search…">
+        <button type="submit" class="btn btn-danger">OK</button>
       </form>
     </div>
 
