--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,4 +1,4 @@
-{% load compressed i18n img %}
+{% load pipeline i18n img %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +6,7 @@
   <title>{% block title %}{{ request.site.name }} — Des images qu'elles sont belles{% endblock title %}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="{{ STATIC_URL }}/img/favicon.ico" rel="icon" type="image/x-icon">
-  {% compressed_css "base" %}
+  {% stylesheet "base" %}
 
   {% block extra_css %}{% endblock extra_css %}
 </head>
@@ -71,7 +71,7 @@
   {% block content %}{% endblock content %}
 </div>
 
-{% compressed_js "base" %}
+{% javascript "base" %}
 {% block extra_js %}{% endblock extra_js %}
 </body>
 </html>
